[package]
name = "kvm-ioctls"
version = "0.8.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Safe wrappers over KVM ioctls"
repository = "https://github.com/rust-vmm/kvm-ioctls"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0 OR MIT"

[dependencies]
libc = ">=0.2.39"
kvm-bindings = { git = "https://github.com/sameo/kvm-bindings.git", branch = "topic/v5.11", features = ["fam-wrappers"] }
vmm-sys-util = ">=0.8.0"

[dev-dependencies]
byteorder = ">=1.2.1"
